# sumi

./: .gitignore  COMPLETION_PLAN.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICK_START_FIXES.md  README.md  TODO.md  sumi-ripple-spec.md  sumi-ripple.rtf
.zed/: debug.json
examples/: sample_config.toml
src/: lib.rs  main.rs
src/config/: mod.rs  parser.rs  types.rs  validation.rs
src/crawler/: coordinator.rs  fetcher.rs  mod.rs  parser.rs  scheduler.rs
src/output/: markdown.rs  mod.rs  sqlite_output.rs  stats.rs  traits.rs
src/robots/: cache.rs  mod.rs  parser.rs
src/state/: domain_state.rs  mod.rs  page_state.rs
src/storage/: mod.rs  schema.rs  sqlite.rs  traits.rs
src/url/: domain.rs  matcher.rs  mod.rs  normalize.rs
tests/: integration_tests.rs
tests/integration/: crawl_tests.rs  mod.rs
